set line-height for textview

--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -12,6 +12,9 @@
 ** main_window
 */
 
+textview {
+    line-height: 1;
+}
 paned.sidebar_paned {
     background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
 }
