--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -1,20 +1,10 @@
-@define-color fg_color_light mix(@theme_fg_color, transparent, 0.5);
-@define-color list_hover mix(@theme_fg_color, transparent, 0.9);
-@define-color list_active mix(@theme_fg_color, transparent, 0.8);
-@define-color code_folding_hover #c7c7c7;
-@define-color highlight_tag_preview rgba(250, 240, 107, 0.6);
-@define-color highlight_tag_textview rgba(250, 240, 107, 0.65);
-@define-color ac_text #000000;
-@define-color ac_bg #fff895;
-@define-color ac_selection_bg #f8e45c;
-@define-color line_highlighting_color #eef4ff;
-
 /*
 ** main_window
 */
 
 textview {
     line-height: 1;
+    background: @view_bg_color;
 }
 paned.sidebar_paned {
     background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
