--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -6,9 +6,6 @@ textview {
     line-height: 1;
     background: @view_bg_color;
 }
-paned.sidebar_paned {
-    background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
-}
 button.new-document-menu-button {
     padding-left: 8px;
     padding-right: 8px;
@@ -27,7 +24,7 @@ box.welcome {
     margin-left: 150px;
     margin-right: 150px;
     margin-bottom: 150px;
-    background: radial-gradient(@theme_bg_color 10%, @theme_bg_color 30%, transparent 50%) -75px 0px, radial-gradient(@theme_bg_color 10%, @theme_bg_color 30%, transparent 50%) 75px 0px;
+    background: radial-gradient(@window_bg_color 10%, @window_bg_color 30%, transparent 50%) -75px 0px, radial-gradient(@window_bg_color 10%, @window_bg_color 30%, transparent 50%) 75px 0px;
 }
 label.welcome-header {
     font-size: 32pt;
@@ -92,10 +89,10 @@ popover.documentchooser box.not_found label {
 }
 .open-docs-popover list,
 .open-docs-popover row:not(:hover):not(:selected) {
-    background-color: @theme_bg_color;
+    background-color: @view_bg_color;
 }
 .open-docs-popover row:hover:not(:active):not(:selected) {
-    background-color: mix(@theme_bg_color, @borders, 0.5);
+    background-color: @view_hover_color;
 }
 .open-docs-popover scrollbar slider {
     min-height: 12px;
@@ -103,7 +100,7 @@ popover.documentchooser box.not_found label {
 .open-docs-popover row {
     border-radius: 6px;
     padding: 5px 5px 5px 8px;
-    color: @theme_fg_color;
+    color: @view_fg_color;
 }
 .open-docs-popover list {
     padding: 0px;
@@ -127,7 +124,7 @@ popover.documentchooser box.not_found label {
     border-width: 0px;
 }
 .open-docs-popover label.root-label {
-    opacity: 0.3;
+    color: @description_color;
 }
 button.like-model {
     border-width: 0px;
@@ -138,7 +135,7 @@ button.like-model {
     outline: none;
 }
 button.like-model:hover {
-    background: @theme_base_color;
+    background: @view_bg_color;
     transition: none;
 }
 .open-docs-popover list .icon {
@@ -172,7 +169,7 @@ box.build-widget label.build-timer {
 */
 
 box.buildlog > box {
-    background: @theme_base_color;
+    background: @view_bg_color;
 }
 box.buildlog > box label {
     padding-left: 12px;
@@ -186,23 +183,23 @@ box.buildlog > box button {
 */
 
 popover arrow {
-    background: @theme_bg_color;
+    background: @window_bg_color;
 }
 popover contents {
-    background: @theme_bg_color;
+    background: @window_bg_color;
 }
 popover button.action, popover button.menu, popover button.header {
     background: none;
     font-weight: normal;
 }
 popover button.action:hover, popover button.menu:hover, popover button.header:hover {
-    background: mix(@theme_bg_color, @borders, 0.5);
+    background: @view_hover_color;
 }
 popover button.action:active, popover button.action:focus, popover button.menu:active, popover button.menu:focus, popover button.header:active, popover button.header:focus {
     background: @borders;
 }
 popover button label.shortcut {
-    color: mix(@theme_base_color, @theme_fg_color, 0.6);
+    color: @menu_shortcut_color;
     margin-left: 18px;
 }
 popover separator {
@@ -210,7 +207,7 @@ popover separator {
 }
 popover label.explaination {
     margin: 0px 10px;
-    color: mix(@theme_fg_color, @theme_bg_color, 0.3);
+    color: @description_color;
     font-size: 13px;
 }
 popover label.explaination-header {
@@ -223,11 +220,11 @@ popover label.explaination-header {
 */
 
 .sidebar {
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
 }
 .sidebar box.tabs-box {
-    background-color: @theme_base_color;
-    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.8);
+    background-color: @view_bg_color;
+    border-bottom: 1px solid @lighter_border;
     padding-bottom: 0px;
 }
 .sidebar box.tabs-box.no-border {
@@ -236,7 +233,7 @@ popover label.explaination-header {
 }
 .sidebar box.tabs-box > label {
     padding: 9px 8px 8px 9px;
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
 }
 .sidebar box.tabs-box button {
     margin: 0px;
@@ -246,33 +243,33 @@ popover label.explaination-header {
     box-shadow: none;
 }
 box.sidebar-symbols {
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
 }
 box.sidebar-symbols label {
     padding: 9px 8px 8px 9px;
-    background-color: @theme_base_color;
-    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.8);
+    background-color: @view_bg_color;
+    border-bottom: 1px solid @lighter_border;
 }
 box.sidebar-symbols label.overlay {
     border-bottom-width: 0px;
 }
 box.sidebar-symbols flowbox {
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
     padding-bottom: 36px;
 }
 box.sidebar-symbols flowbox flowboxchild {
     padding: 0px;
 }
 box.sidebar-symbols flowbox flowboxchild image {
-    color: @theme_fg_color;
-    background-color: @theme_base_color;
-    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.8);
-    border-right: 1px solid mix(@theme_base_color, @borders, 0.8);
+    color: @view_fg_color;
+    background-color: @view_bg_color;
+    border-bottom: 1px solid @lighter_border;
+    border-right: 1px solid @lighter_border;
     margin: 0px;
     padding: 5px;
 }
 box.sidebar-symbols flowbox flowboxchild image.no_right_border {
-    border-right: 1px solid mix(@theme_base_color, @theme_bg_color, 0.7);
+    border-right: 1px solid transparent;
 }
 box.sidebar-symbols box.search_bar {
     padding-left: 6px;
@@ -283,15 +280,15 @@ box.sidebar-symbols box.search_bar button {
 }
 .sidebar-document-structure scrolledwindow label.headline {
     padding: 9px 8px 8px 9px;
-    background-color: @theme_base_color;
-    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.8);
+    background-color: @view_bg_color;
+    border-bottom: 1px solid @lighter_border;
 }
 .sidebar-document-structure label.overlay {
     padding: 9px 8px 8px 9px;
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
 }
 box.document-stats .description {
-    color: mix(@theme_fg_color, @theme_bg_color, 0.3);
+    color: @description_color;
     font-size: 13px;
     padding: 9px 8px 8px 9px;
 }
@@ -310,8 +307,8 @@ box.document-stats {
 */
 
 box.shortcutsbar {
-    background-color: @theme_base_color;
-    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.8);
+    background-color: @view_bg_color;
+    border-bottom: 1px solid @lighter_border;
 }
 box.shortcutsbar button.scbar, box.shortcutsbar menubutton.scbar > button {
     border-width: 0px;
@@ -333,11 +330,11 @@ popover.menu-own-quotes-symbolic {
 */
 
 box.preview scrolledwindow {
-    background-color: #fff;
+    background-color: @view_bg_color;
 }
 box.preview > box {
-    background-color: @theme_base_color;
-    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.8);
+    background-color: @view_bg_color;
+    border-bottom: 1px solid @lighter_border;
 }
 box.preview button.scbar, box.preview .scbar > button {
     border-width: 0px;
@@ -347,14 +344,14 @@ box.preview button.scbar, box.preview .scbar > button {
     padding: 6px;
 }
 box.preview button.scbar:checked, box.preview .scbar > button:checked {
-    background: mix(@theme_base_color, @borders, 0.45);
+    background: @button_active_color;
 }
 box.preview button.scbar:active, box.preview .scbar > button:active {
-    background: mix(@theme_base_color, @borders, 0.45);
+    background: @button_active_color;
 }
 .zoom-level-button {
     padding-top: 3px;
-    background: @theme_base_color;
+    background: @view_bg_color;
     border: 1px solid @borders;
     border-radius: 3px;
     font-weight: normal;
@@ -368,11 +365,10 @@ label.target-label {
     border-right: 1px solid @borders;
     border-top-right-radius: 3px;
     padding: 3px 6px 3px 6px;
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
 }
 box.preview_blank {
-    background-color: @theme_bg_color;
-    background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
+    background-color: @blank_preview_color;
 }
 box.preview_blank image {
     opacity: 0.5;
@@ -402,11 +398,11 @@ paned > paned.visible-separator separator {
 */
 
 box.help {
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
 }
 box.help > box {
-    background-color: @theme_base_color;
-    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.8);
+    background-color: @view_bg_color;
+    border-bottom: 1px solid @lighter_border;
 }
 box.help > box button {
     border-width: 0px;
@@ -419,16 +415,16 @@ box.help > box button label {
     text-decoration: underline;
 }
 box.help > box button:checked {
-    background: mix(@theme_base_color, @borders, 0.45);
+    background: @button_active_color;
 }
 box.help > box button:active {
-    background: mix(@theme_base_color, @borders, 0.45);
+    background: @button_active_color;
 }
 label.location-label {
     margin-top: 2px;
     margin-bottom: 5px;
     font-size: 9pt;
-    color: mix(@theme_base_color, @theme_fg_color, 0.6);
+    color: @location_label_color;
 }
 
 /*
@@ -436,13 +432,13 @@ label.location-label {
 */
 
 box.search_bar {
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
     border-top: 1px solid @borders;
     padding: 6px;
     padding-left: 0px;
 }
 box.search_bar button.close {
-    background: @theme_base_color;
+    background: @view_bg_color;
     border-width: 0px;
 }
 box.search_bar button.text-button {
@@ -452,7 +448,7 @@ box.search_bar button.text-button {
 box.search_bar entry.search_entry {
 }
 .search_match_counter {
-    color: mix(@theme_fg_color, @theme_bg_color, 0.3);
+    color: @description_color;
 }
 
 /*
@@ -471,36 +467,11 @@ box.preferences-page checkbutton radio {
     margin-right: 6px;
 }
 box.preferences-page .description {
-    color: mix(@theme_fg_color, @theme_bg_color, 0.3);
+    color: @description_color;
     font-size: 13px;
 }
 box.preferences-page .preview {
     border: 1px solid @borders;
-}
-box.preferences-page .preview.light-bg textview text {
-    background: #fff;
-}
-box.preferences-page .preview.dark-bg textview text {
-    background: #2d2d2d;
-}
-box.preferences-page button.style-switcher-label {
-    padding: 0px;
-    margin: 0px;
-    border: none;
-    box-shadow: none;
-    background: none;
-    outline: none;
-}
-box.preferences-page button.style-switcher-label label {
-    padding: 0px;
-    margin: 0px;
-    color: @theme_selected_bg_color;
-    text-decoration: underline;
-}
-box.preferences-page button.style-switcher-label.active label {
-    font-weight: bold;
-    color: @theme_fg_color;
-    text-decoration: none;
 }
 
 /*
@@ -525,7 +496,7 @@ box.document-wizard-page scale {
 box.document-wizard-page scale value {
     margin-left: 3px;
     margin-bottom: 3px;
-    color: @theme_fg_color;
+    color: @window_fg_color;
     opacity: 1;
 }
 box.document-wizard-page button {
@@ -535,11 +506,11 @@ list.document-wizard-list1 {
     border: 1px solid @borders;
 }
 list.document-wizard-list1 row {
-    border-bottom: 1px solid mix(@borders, @theme_base_color, 0.68);
+    border-bottom: 1px solid @list_row_border_color;
     padding: 6px;
 }
 list.document-wizard-list2 row {
-    border-bottom: 1px solid mix(@borders, @theme_base_color, 0.68);
+    border-bottom: 1px solid @list_row_border_color;
     padding: 6px;
 }
 label.document-wizard-header {
@@ -553,13 +524,13 @@ label.document-wizard-subheader {
     padding-top: 6px;
 }
 label.document-wizard-option-desc {
-    color: mix(@theme_fg_color, @theme_bg_color, 0.3);
+    color: @description_color;
     font-size: 13px;
     margin-left: 26px;
     margin-bottom: 6px;
 }
 label.document-wizard-desc {
-    color: mix(@theme_fg_color, @theme_bg_color, 0.3);
+    color: @description_color;
 }
 scrolledwindow.document-wizard-scrolledwindow {
     border: 1px solid @borders;
@@ -575,7 +546,7 @@ box.document-wizard-beamer-preview-buttons button {
 }
 box.document-wizard-page box.margins-box {
     border: 1px solid @borders;
-    background-color: @theme_base_color;
+    background-color: @view_bg_color;
 }
 box.document-wizard-page box.margins-box spinbutton.left {
     border-left: 0px;
@@ -601,14 +572,14 @@ box.add-remove-packages-add-box scrolledwindow {
     border: 1px solid @borders;
 }
 box.add-remove-packages-add-box list row {
-    border-bottom: 1px solid mix(@borders, @theme_base_color, 0.68);
+    border-bottom: 1px solid @list_row_border_color;
     padding: 6px;
 }
 box.add-remove-packages-remove-box scrolledwindow {
     border: 1px solid @borders;
 }
 box.add-remove-packages-remove-box list row {
-    border-bottom: 1px solid mix(@borders, @theme_base_color, 0.68);
+    border-bottom: 1px solid @list_row_border_color;
     padding: 6px;
 }
 
@@ -631,7 +602,7 @@ box.add-remove-packages-remove-box list row {
     border: 1px solid @borders;
 }
 .bibtex-wizard-list1 row {
-    border-bottom: 1px solid mix(@borders, @theme_base_color, 0.68);
+    border-bottom: 1px solid @list_row_border_color;
     padding: 6px;
 }
 box.bibtex-wizard-page checkbutton {
