--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -238,6 +238,7 @@ box.popover button.action, box.popover button.menu, box.popover button.header {
 }
 box.popover button.action:hover, box.popover button.menu:hover, box.popover button.header:hover {
     background: @view_hover_color;
+    transition: none;
 }
 box.popover button.action:active, box.popover button.menu:active, box.popover button.header:active {
     background: @borders;
