popover: add back special active button background

--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -249,6 +249,9 @@ box.popover button.header {
 box.popover button.highlight:not(:disabled) {
     background: @view_hover_color;
 }
+box.popover button.highlight:active {
+    background: @borders;
+}
 box.popover button label.shortcut {
     color: @menu_shortcut_color;
     margin-left: 18px;
